# liar-dice-calculator

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: README.md  test.ipynb
src/liar_dice_calculator/core/: __init__.py  _calculator.py
src/liar_dice_calculator/frontend/: app.py
src/liar_dice_calculator/visualization/: __init__.py  _plot.py
tests/: test_calculator copy.py  test_calculator.py
