[project]
name = "liar-dice-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "Jasper Lee",email = "yatshunlee@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.45.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
packages = [{include = "liar_dice_calculator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
